--- a/html/sass/base/_variables.scss
+++ b/html/sass/base/_variables.scss
@@ -1,7 +1,12 @@
 // Colors
 $light: #fff;
-$black: #000;
+$dark: #000000;
+$dark-light: #1B1B1B;
+$primary: #EF7F1A;
+$second: #F3F3F3;
+
+$body-background: $light;
 $transparent: rgba(255, 255, 255, 0);
 
-
-
+$speed: 0.3s;
+$time-function: ease-in-out;
