--- a/html/sass/fonts/_fonts.scss
+++ b/html/sass/fonts/_fonts.scss
@@ -1,9 +1,4 @@
 /*--------- font-face ---------*/
-@font-face {
-  font-family: 'Montserrat-Regular';
-  src: url('../fonts/Montserrat/Montserrat-Regular.woff') format('woff'),
-  url('../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
+//@mixin font($weight, $style, $fileName, $folderName, $fontName: $folderName);
+@include font(400, normal, Rubik-Regular, Rubik);
+@include font(700, normal, Rubik-Bold, Rubik);
