Fix header and footer, finish desktop header

--- a/html/sass/base/_mixins.scss
+++ b/html/sass/base/_mixins.scss
@@ -312,3 +312,12 @@ $animation-speed: .3s;
     @return $number;
   }
 }
+
+@mixin hover-focus($color: $primary) {
+  @include hover {
+    color: $color;
+  }
+  &:focus {
+    color: $color;
+  }
+}
