--- a/html/sass/common.scss
+++ b/html/sass/common.scss
@@ -8,6 +8,7 @@
 @import "common/without-js";
 @import "components/buttons";
 @import "components/social";
+@import "components/menu";
 @import "components/psevdo-icon";
 @import "layout/header";
 @import "layout/footer";
