--- a/html/sass/common/_reset.scss
+++ b/html/sass/common/_reset.scss
@@ -170,10 +170,11 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit; /* 1 */
+  font: inherit; /* 1 */
   font-size: 100%; /* 1 */
   line-height: 1.15; /* 1 */
   margin: 0; /* 2 */
+  color: inherit;
 }
 
 address {
