--- a/html/sass/common.scss
+++ b/html/sass/common.scss
@@ -7,6 +7,8 @@
 @import "common/global";
 @import "common/without-js";
 @import "components/buttons";
+@import "components/logo";
+@import "components/address";
 @import "components/social";
 @import "components/menu";
 @import "components/psevdo-icon";
