--- a/html/sass/common/_global.scss
+++ b/html/sass/common/_global.scss
@@ -22,7 +22,7 @@ a {
   padding-right: $desctop-padding;
   margin-left: auto;
   margin-right: auto;
-  @include min-media(767) {
+  @include media(540) {
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -127,14 +127,14 @@ h2, .h2-title {
   @include min-media(1200) {
     font-size: 40px;
   }
-  @include media(767) {
+  @include media(540) {
     font-size: 24px;
   }
 }
 
 h3, .h3-title {
   @include font-settings(36, 43);
-  @include media(767) {
+  @include media(540) {
     font-size: 24px;
   }
 }
@@ -144,6 +144,14 @@ h4, h5, h6 .h4-title, .h5-title, .h6-title  {
   @include media(1200) {
     font-size: 20px;
   }
+}
+
+.medium-text {
+  @include font-settings(16, 19);
+}
+
+.sub-title {
+  @include font-settings(12, 14);
 }
 
 
