--- a/html/sass/layout/_header.scss
+++ b/html/sass/layout/_header.scss
@@ -4,24 +4,79 @@
   color: $dark;
   font-weight: 700;
   border-bottom: 1px solid $dark;
+  @include font-settings(14, 17);
+  @include media(1200) {
+    padding: 37px 0px;
+  }
+  @include media(540) {
+    padding: 26px 0px;
+  }
   &__main {
     color: $light;
     border-bottom: none;
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    .header {
+      &__lang-list {
+        background: $dark-light;
+        border-color: $dark-light;
+      }
+    }
   }
   &__left,
   &__right {
     display: flex;
     align-items: center;
   }
-  &__left {
-    @include gap(column, 52px);
+  &__burger {
+    position: relative;
+    @include size(45, 28);
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    @include media(1200) {
+      display: flex;
+    }
+    @include media(540) {
+      @include size(29, 18);
+    }
+    span,
+    &:before,
+    &:after {
+      content: '';
+      width: 100%;
+      height: 4px;
+      background: currentColor;
+      border-radius: 2px;
+      @include media(540) {
+        height: 2px;
+      }
+    }
   }
   &__logo {
     margin-right: 52px;
+    @include media(1200) {
+      display: none;
+    }
+  }
+  &__desktop-menu {
+    display: flex;
+    @include gap(column, 52px);
+    @include media(1200) {
+      display: none;
+    }
   }
   &__link {
     margin-right: 44px;
     margin-top: 10px;
+    @include media(1200) {
+      margin-top: 0px;
+      align-self: center;
+    }
+    @include media(540) {
+      margin: 0px;
+    }
   }
   &__social {
     margin-right: 18px;
@@ -31,12 +86,21 @@
     .pseudo-icon {
       @include size(20, 21);
     }
+    @include media(1200) {
+      display: none;
+    }
   }
   &__dropdown {
     margin-top: 16px;
     margin-left: 12px;
     align-self: flex-start;
     position: relative;
+    @include media(1200) {
+      margin-top: 0px;
+    }
+    @include media(540) {
+      display: none;
+    }
     &.is-open {
       .header__lang-active {
         .icon {
@@ -48,6 +112,9 @@
         pointer-events: auto;
         visibility: visible;
         opacity: 1;
+      }
+      .header__lang {
+        pointer-events: auto;
       }
     }
   }
@@ -66,9 +133,14 @@
     @include transition;
     opacity: 0;
   }
+  &__lang {
+    pointer-events: none;
+    text-transform: uppercase;
+  }
   &__lang-active {
     display: flex;
     align-items: center;
+    pointer-events: auto;
     @include gap(column, 4px);
     .icon {
       @include transition;
@@ -78,5 +150,4 @@
   &__lang {
     @include hover-focus-link;
   }
-
 }
