--- a/html/sass/common/_global.scss
+++ b/html/sass/common/_global.scss
@@ -165,3 +165,24 @@ h4, h5, h6 .h4-title, .h5-title, .h6-title  {
 .main {
   flex: 1 0 auto;
 }
+
+.is-open,
+.is-visible {
+  visibility: visible !important;
+  pointer-events: auto !important;
+  opacity: 1 !important;
+}
+
+.overlay {
+  @include transition;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  pointer-events: none;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 97;
+  cursor: pointer;
+}
