--- a/html/sass/common.scss
+++ b/html/sass/common.scss
@@ -12,5 +12,6 @@
 @import "components/social";
 @import "components/menu";
 @import "components/psevdo-icon";
+@import "components/form";
 @import "layout/header";
 @import "layout/footer";
