--- a/html/sass/home-page.scss
+++ b/html/sass/home-page.scss
@@ -1,3 +1,7 @@
 @charset "UTF-8";
 @import "base/base";
+@import "components/heading";
+@import "layout/row";
 @import "layout/hero";
+@import "layout/contact";
+
