--- a/html/sass/components/_psevdo-icon.scss
+++ b/html/sass/components/_psevdo-icon.scss
@@ -6,7 +6,7 @@
     height: 100%;
     content: '';
     display: block;
-    background-size: 100%;
+    background-size: contain;
     background-repeat: no-repeat;
   }
   &__whats-up {
