Add contact section

--- a/html/sass/base/_variables.scss
+++ b/html/sass/base/_variables.scss
@@ -14,4 +14,5 @@ $time-function: ease-in-out;
 
 //layout
 $desktop-padding: 44px;
+$mobile-padding: 20px;
 $container: 1642px + (#{$desktop-padding * 2});
