--- a/html/sass/common.scss
+++ b/html/sass/common.scss
@@ -13,6 +13,7 @@
 @import "components/menu";
 @import "components/psevdo-icon";
 @import "components/form";
+@import "components/heading";
 @import "components/modal";
 @import "layout/row";
 @import "layout/header";
