--- a/html/sass/common/_global.scss
+++ b/html/sass/common/_global.scss
@@ -22,8 +22,8 @@ a {
   margin-left: auto;
   margin-right: auto;
   @include media(540) {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: $mobile-padding;
+    padding-right: $mobile-padding;
   }
 }
 
