--- a/html/sass/home-page.scss
+++ b/html/sass/home-page.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import "base/base";
-@import "components/heading";
+@import "components/buttons-row";
 @import "layout/hero";
 @import "layout/contact";
 
