--- a/html/sass/layout/_row.scss
+++ b/html/sass/layout/_row.scss
@@ -1,6 +1,9 @@
 .row {
   display: flex;
   justify-content: space-between;
+  @include media(1200) {
+    flex-direction: column;
+  }
   --gap: 75px;
   &__small-gap {
     --gap: 20px;
@@ -8,6 +11,9 @@
   &__item {
     max-width: calc((100% - var(--gap)) / 2);
     width: 100%;
+    @include media(1200) {
+      max-width: 100%;
+    }
   }
   &__item-right-container {
     padding-right: calc(calc((100vw - var(--gap)) / 2) - ((#{$container} - var(--gap)) / 2));
