--- a/html/sass/components/_form.scss
+++ b/html/sass/components/_form.scss
@@ -7,4 +7,15 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .screen-reader-response,
+  .wpcf7-not-valid-tip {
+    display: none;
+  }
+  .wpcf7-response-output {
+    @include font-settings(12, 14);
+    color: red;
+    padding-bottom: 5px;
+    border-bottom: 1px solid red;
+    margin-top: 5px;
+  }
 }
