--- a/html/sass/layout/_row.scss
+++ b/html/sass/layout/_row.scss
@@ -17,6 +17,10 @@
   }
   &__item-right-container {
     padding-right: calc(calc((100vw - var(--gap)) / 2) - ((#{$container} - var(--gap)) / 2));
+    @include min-media(1921) {
+      padding-right: 0px;
+      width: 783.5px;
+    }
     & > * {
       margin-right: $desktop-padding;
     }
