Add slider desktop

--- a/html/sass/common/_global.scss
+++ b/html/sass/common/_global.scss
@@ -113,6 +113,7 @@ blockquote {
 h1, h2, h3, h4, h4, h6, .h1-title, .h2-title, .h3-title, .h4-title, .h5-title, .h6-title {
   display: block;
   text-transform: uppercase;
+  font-weight: 700;
 }
 
 h1, .h1-title {
