--- a/html/sass/base/_variables.scss
+++ b/html/sass/base/_variables.scss
@@ -9,10 +9,15 @@ $second-dark: #929292;
 $body-background: $light;
 $transparent: rgba(255, 255, 255, 0);
 
-$speed: 0.3s;
+$speed: 300ms;
 $time-function: ease-in-out;
+:root {
+  --speed: #{$speed};
+  --time-function: #{$time-function};
+}
 
 //layout
 $desktop-padding: 44px;
 $mobile-padding: 20px;
-$container: 1642px + (#{$desktop-padding * 2});
+$desktop-width: 1642px;
+$container: $desktop-width + (#{$desktop-padding * 2});
