Add html for section 'How we work'

--- a/html/sass/common.scss
+++ b/html/sass/common.scss
@@ -16,5 +16,6 @@
 @import "components/heading";
 @import "components/modal";
 @import "layout/row";
+@import "layout/grid";
 @import "layout/header";
 @import "layout/footer";
