--- a/html/sass/home-page.scss
+++ b/html/sass/home-page.scss
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 @import "base/base";
 @import "components/buttons-row";
+@import "components/step";
+@import "components/video";
 @import "layout/hero";
+@import "layout/how-we-work";
 @import "layout/contact";
 
